@@ -12,6 +12,12 @@ See the end of the file for license conditions.
 
 * Rewrite handout (which can be mentioned in documentation).
 
+* Rewrite the beamer version.
+
+* Make web page for distribution.
+
+* Announce to group pub.
+
 
 This file is part of Toddcox.
 
